Rewrite README for clarity